--- a/style.css
+++ b/style.css
@@ -2,4 +2,16 @@ body {
     font-family: sans-serif;
     padding: 20px;
   }
+
+  ::selection {
+    background: #ff9900;
+    color: #000;
+  }
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+    li {
+        margin: 5px 0;
+    }
   
