--- a/style.css
+++ b/style.css
@@ -3,16 +3,45 @@ body {
     padding: 20px;
   }
 
-  ::selection {
-    background: #ff9900;
-    color: #000;
+  hr {
+    border-color: black; ;
   }
+
+  section {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto
+  }
+  
   ul {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-between;
   }
     li {
         margin: 5px 0;
+        width:100%;
+        display: flex;
+
+        justify-content: space-between;
+        align-items: space-between;
+    }
+
+    button {
+      border-radius: 999px;
+      padding: 5px;
+    }
+
+    button:hover {
+      background-color:black;
+      color:white;
+    }
+
+    p{
+      
     }
   
 
