UI and remove unused code

--- a/style.css
+++ b/style.css
@@ -40,9 +40,14 @@ body {
       color:white;
     }
 
-    p{
-      
-    }
+  summary {
+    border-radius: 10px;
+    padding: 10px;
+  }
   
+    summary:hover {
+      background-color: black;
+      color: white;
+    }
 
     
