--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   --white: #F9F6EF;
 }
 
+*{
+  cursor: url("cursor.svg") 16 16, auto;
+transition: background-color 0.4s ease;
+}
 /* Typography */
 body, html {
   margin: 0;
@@ -13,7 +17,6 @@ body, html {
   background: var(--white);
   color: var(--black);
   max-width:600px;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -112,9 +115,9 @@ button {
   background-color: var(--white);
   border: 2px solid var(--black);
   box-shadow: 4px 4px 0 var(--black);
-  cursor: pointer;
   transition: all 0.2s ease;
   font-family: 'Roboto Mono', monospace;
+
 }
 
 button:hover {
@@ -127,7 +130,12 @@ button:hover {
 /* Sections and Grouping */
 div, section, article, aside, nav, header, footer, main {
   margin-bottom: 2em;
-  border: 2 px solid var(--black);
+}
+
+hr {
+  border: 0;
+  border-top: 2px solid var(--black);
+  margin: 1em 0;
 }
 
 /* Semantic Inline */
